turtleart.circletwo.CircleTwo.scala.error
Compilation error:
CircleTwo:13: error: Unmatched closing brace '}' ignored here
}
^